[gd_scene load_steps=7 format=2]

[ext_resource path="res://Wood.gd" type="Script" id=1]
[ext_resource path="res://Lumber/wood.png" type="Texture" id=2]

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -14, 11, -14, 11, -14, -13, 14, -13, 14, 11 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 0.166667 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 0.833333 )

[node name="Wood" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 0, 1 )
occluder = SubResource( 5 )

[node name="Wood" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
scale = Vector2( 1, 3 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 1 )

[node name="WoodBottom" type="Area2D" parent="."]
scale = Vector2( 1, 3 )
collision_layer = 4
collision_mask = 4

[node name="Woodbottomcheck" type="CollisionShape2D" parent="WoodBottom"]
position = Vector2( 0, 4.83333 )
shape = SubResource( 3 )

[node name="TopCheck" type="Area2D" parent="."]
scale = Vector2( 1, 3 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCheck"]
position = Vector2( 0, -3.16667 )
shape = SubResource( 4 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="WoodBottom" to="." method="_on_WoodBottom_area_exited"]
